Various typos and editing fixes

--- a/01_agama/dirgha/DA_14.md
+++ b/01_agama/dirgha/DA_14.md
@@ -265,7 +265,7 @@ The Buddha told Lord Śakra, “Craving arises from conception. Conception is it
 34\. Lord Śakra then said to the Buddha, “Indeed, it is, Bhagavān! Craving arises from conception. Conception is its cause and condition. Conception is its source. From this, it comes to exist. In its absence, it ceases to exist. Now that I’ve heard the Buddha’s explanation[, my confusion is completely removed.] I won’t wonder about it anymore.
 {:#p34}
 
-35\. “But I don’t understand the arising of conception. What is its causes and conditions? What it its source? From what does it come to exist? From what does it cease to exist?”
+35\. “But I don’t understand the arising of conception. What are its causes and conditions? What is its source? From what does it come to exist? From what does it cease to exist?”
 {:#p35}
 
 36\. The Buddha told Lord Śakra, “The conception that gives rise to it has its origin in error.[\[3\]](#n3){:#ref3} Error is its cause and condition. Error is its source. From this, it comes to exist. In its absence, it ceases to exist.
