--- a/01_agama/dirgha/DA_21.md
+++ b/01_agama/dirgha/DA_21.md
@@ -121,7 +121,7 @@ next: DA_22.html
 35\. “What are the reasons those ascetics and priests make diverse and countless statements as they like about past eons, and enter these 18 views that they don’t go beyond?
 {:#p35}
 
-#### Self and World Are Eternal
+#### Self and the World Are Eternal
 
 36\. “Ascetics and priests create this eternalist theory about past eons: ‘Self and the world always exists.’ They all enter four views. Regarding past eons, they say that self and the world always exists and don’t go beyond these four views that they enter.
 {:#p36}
@@ -150,7 +150,7 @@ next: DA_22.html
 44\. “This is that other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata.
 {:#p44}
 
-#### Self and World Are Half Eternal and Half Impermanent
+#### Self and the World Are Half Eternal and Half Impermanent
 
 45\. “Again, what’s the other teaching that illuminates what’s profound, subtle, and great and which causes the noble disciples to truly and equally praise the Tathāgata?
 {:#p45}
