--- a/01_agama/dirgha/DA_30-1.md
+++ b/01_agama/dirgha/DA_30-1.md
@@ -116,25 +116,25 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 
 #### The Great Trees of the World
 
-32\. “Uttarakuru has a great tree king named Amra. It’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out for fifty yojanas in each direction.
+32\. “Uttarakuru has a great tree king named Amra. It’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction.
 {:#p32}
 
-33\. “Pūrvavideha has a great tree king named Kadamba. It’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out for fifty yojanas in each direction.
+33\. “Pūrvavideha has a great tree king named Kadamba. It’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction.
 {:#p33}
 
-34\. “Godānīya has a great tree king named Tinduka. It’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out for fifty yojanas in each direction. That tree also has a banner of a stone bull under it that’s one yojana tall.
+34\. “Godānīya has a great tree king named Tinduka. It’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction. That tree also has a banner of a stone bull under it that’s one yojana tall.
 {:#p34}
 
-35\. “Jambudvīpa has a great tree king named Jambu. it’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out for fifty yojanas in each direction.
+35\. “Jambudvīpa has a great tree king named Jambu. it’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction.
 {:#p35}
 
-36\. “The king of the garuḍa birds and the king of the nāgas have a tree named Kūṭaśālmali. It’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out for fifty yojanas in each direction.
+36\. “The king of the garuḍa birds and the king of the nāgas have a tree named Kūṭaśālmali. It’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction.
 {:#p36}
 
-37\. “The king of the asuras has a tree named Good Day. It’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out for fifty yojanas in each direction.
+37\. “The king of the asuras has a tree named Good Day. It’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction.
 {:#p37}
 
-38\. “The Trāyastriṃśa Heaven has a tree named Pārijāta. It’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out for fifty yojanas in each direction.
+38\. “The Trāyastriṃśa Heaven has a tree named Pārijāta. It’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction.
 {:#p38}
 
 #### Lesser Mountains around Sumeru
@@ -189,7 +189,7 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 
 #### Beyond the Lesser Mountains
 
-55\. “Not far beyond Mount Cakravāḍa is a great ocean. On the north shore of that ocean is the great tree king named Jambu that’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out for fifty yojanas in each direction. It’s bordered by an open area.
+55\. “Not far beyond Mount Cakravāḍa is a great ocean. On the north shore of that ocean is the great tree king named Jambu that’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out for fifty yojanas in each direction. It’s bordered by an open area.
 {:#p55}
 
 56\. “There’s also a forest named Āmra that’s fifty yojanas across.[\[4\]](#n4){:#ref4}
@@ -344,7 +344,7 @@ There’s another forest named Grape that’s fifty yojanas across.
 81\. “The four kinds of flowers grow in that lake with a mixture of blues, yellows, reds, and whites. The flowers are like cartwheels and their roots are like wheel hubs. The roots of those flowers produce sap that’s white as milk and tastes sweet as honey.
 {:#p81}
 
-82\. “There are many scenic parks, forests, and ponds on all four sides of that lake where various refreshing flowers and trees grow. Their flowers and fruit are bountiful, and countless birds sing to each other peacefully as before.
+82\. “There are many scenic parks, forests, and ponds on all four sides of that lake where various refreshing flowers and trees grow. Their flowers and fruit are bountiful, and countless birds sing to each other peacefully <em>as before</em>.
 {:#p82}
 
 83\. “When the elephant king Susaṃsthita decides to entertain himself in the lake, he thinks of the other 8,000 elephant kings. Those 8,000 elephant kings then think to themselves, ‘The elephant king Susaṃsthita is thinking of us now! We ought to pay the elephant king a visit.’ Then the herd of elephants go before him.
