--- a/01_agama/dirgha/DA_30-12.md
+++ b/01_agama/dirgha/DA_30-12.md
@@ -200,7 +200,7 @@ As described by the Buddha sun.”
 56\. The Buddha told the monks, “There are times when the moon palace’s round form waxes and wanes, and its light decreases and disappears. Therefore, the moon palace is named for its reduction. ‘Moon’ has two meanings. The first is to abide in eternal liberation. The second is the palace hall.
 {:#p56}
 
-57\. “It’s round because it’s seen from far away in all four directions. It’s made of heavenly silver and beryl that’s neither cold nor hot. Two-thirds of it is pure and unadulterated heavenly silver, inside and out, and it’s light shines far away. One-third of it is pure and unadulterated beryl, inside and out, and its light shines far away.
+57\. “It’s round because it’s seen from far away in all four directions. It’s made of heavenly silver and beryl that’s neither cold nor hot. Two-thirds of it is pure and unadulterated heavenly silver, inside and out, and its light shines far away. One-third of it is pure and unadulterated beryl, inside and out, and its light shines far away.
 {:#p57}
 
 58\. “The moon palace is forty-nine yojanas across. The palace’s walls are a mineral that’s light as oak or pine wood. The palace has seven walls, seven balustrades, seven nettings, seven treasure bells, and seven rows of trees encircling it with decorations made of seven treasures … and countless birds sing to each other peacefully.
@@ -250,7 +250,7 @@ As described by the Buddha sun.”
 72\. “Again, what’s the reason the moon’s light gradually becomes full? There are three causes that make the moon’s light gradually become full. What are the three? First, the moon’s facing is a perfect square, so the moon’s light becomes full.
 {:#p72}
 
-73\. “Second, the moon palace’s ministers take off their blue robes. The moon god sits in his place on the fifteenth day to entertain himself. His light then shines everywhere and blocks the light of the heavens, so it’s light is completely full. It’s just as when the flame of a large torch among lit lamps blocks the light of the lamps. That moon god is likewise. On the fifteenth day, the myriad lights of the host of gods are blocked. The moon’s light is the only one that shines in the same way. This is the second reason.
+73\. “Second, the moon palace’s ministers take off their blue robes. The moon god sits in his place on the fifteenth day to entertain himself. His light then shines everywhere and blocks the light of the heavens, so its light is completely full. It’s just as when the flame of a large torch among lit lamps blocks the light of the lamps. That moon god is likewise. On the fifteenth day, the myriad lights of the host of gods are blocked. The moon’s light is the only one that shines in the same way. This is the second reason.
 {:#p73}
 
 74\. “Third, although the sun god has sixty rays of light that shine on the moon palace, the moon god is able to counteract them on the fifteenth day so that the moon’s light isn’t obscured. This is the third cause for the moon palace to become completely full without any decrease.
@@ -279,7 +279,7 @@ As described by the Buddha sun.”
 81\. “Jambudvīpa is named after the Jambu [tree]. Under it, there’s a mountain of gold that’s 30 yojanas tall and causes the Jambu tree to grow, so it’s called Jambu’s gold. The Jambu tree has fruit that resembles mushrooms and tastes as sweet as honey.
 {:#p81}
 
-82\. “That tree has five large corners.[\[5\]](#n5){:#ref5} On it’s four sides are four corners, and one corner is above it. Gandharvas eat the fruit on the east corner. People from the seven countries eat the fruit on the south corner. The first country is Kuru,  the second is Koravya (?), third is Videha, fourth is Suvideha (?), fifth is Manda (?), sixth is Bārāṇasī, and seventh is Parikhā (?). Sea serpents eat the fruit on the west corner. Animals eat the fruit on the  north corner. Gods of the stellar constellations eat the fruit from the top corner.
+82\. “That tree has five large corners.[\[5\]](#n5){:#ref5} On its four sides are four corners, and one corner is above it. Gandharvas eat the fruit on the east corner. People from the seven countries eat the fruit on the south corner. The first country is Kuru,  the second is Koravya (?), third is Videha, fourth is Suvideha (?), fifth is Manda (?), sixth is Bārāṇasī, and seventh is Parikhā (?). Sea serpents eat the fruit on the west corner. Animals eat the fruit on the  north corner. Gods of the stellar constellations eat the fruit from the top corner.
 {:#p82}
 
 83\. “North of the seven great countries, there are seven great black mountains. The first is Bare Land, second is White Stork, third is Palace Protector, fourth is Sage Mountain, fifth is High Mountain, sixth is Dhyāna Mountain, and seventh is Land Mountain. On these seven black mountains, there are seven priestly sages. These seven sages who live on them are named Good Lord, Good Light, Palace Protector, Sage, Palace Defender, Gaṇana, and Increase.”[\[6\]](#n6){:#ref6}
@@ -290,7 +290,7 @@ As described by the Buddha sun.”
 84\. The Buddha told the monks, “The first sentient beings of the eon eat the flavor of the earth, and they live in the world for a long time. Those that often eat it become cruder in appearance, and those that seldom eat it are shiny in appearance. After a while, they notice that the appearance of the other sentient beings has become superior or inferior, and they argue with each other. ‘I am superior to you! You are not my equal!’ Self and other enter their minds. Because they maintain grudges, the earth flavor dries up.
 {:#p84}
 
-85\. “Next, the earth grows a skin shaped like thin rice cakes, and it’s color, flavor, and aroma is pure. At that point, the sentient beings gather in one place and feel miserable, lament, and beat their breasts. They say, ‘Oh, what a disaster! The flavor of the earth is nowhere to be found now!’ It’s like present-day people who discover a rich and delicious flavor, and they praise it as delicious and good. Later, they miss it and are saddened. Those sentient beings are likewise, feeling miserable and regretful.
+85\. “Next, the earth grows a skin shaped like thin rice cakes, and its color, flavor, and aroma is pure. At that point, the sentient beings gather in one place and feel miserable, lament, and beat their breasts. They say, ‘Oh, what a disaster! The flavor of the earth is nowhere to be found now!’ It’s like present-day people who discover a rich and delicious flavor, and they praise it as delicious and good. Later, they miss it and are saddened. Those sentient beings are likewise, feeling miserable and regretful.
 {:#p85}
 
 86\. “After they eat the earth skin, they slowly get its flavor. Those that often eat it become cruder in appearance, and those that seldom eat it are shiny in appearance. After a while, they notice that the appearance of the other sentient beings has become superior or inferior, and they argue with each other. ‘I’m superior to you! You are not my equal!’ Self and other enter their minds. Because they harbor grudges, the earth skin dries up.
@@ -324,7 +324,7 @@ As described by the Buddha sun.”
 94\. “At that point, the city of Campā is built. Next, the city of Kāśi is built, and then the city of Rājagṛha is built. They begin building them when the sun rises and complete them when the sun rises. As a result, the world has the names of large cities and districts that are governed by kings.
 {:#p94}
 
-95\. “Sentient beings begin eating the spontaneous rice. When they gather it in the morning, it’s ripe again by evening. When they gather it in the evening, and it’s ripen again by morning. After they gather it, the rice grows back again without stems or stalks.
+95\. “Sentient beings begin eating the spontaneous rice. When they gather it in the morning, it’s ripe again by evening. When they gather it in the evening, and it’s ripe again by morning. After they gather it, the rice grows back again without stems or stalks.
 {:#p95}
 
 96\. “Some sentient beings then silently think to themselves, ‘I gather this rice every day. It’s tiresome for me to do that. Now, I’ll gather enough to supply myself for several days.’ Then, when they gather the rice, they accumulate enough for several days.
@@ -355,13 +355,13 @@ As described by the Buddha sun.”
 103\. “‘After that, the flavor of the earth first arose, which was perfect in color and flavor. We ate this flavor of the earth, and we lived in the world for a long time. Those that often ate it became cruder in appearance, and those that seldom ate were still shiny in appearance. Sentient beings held [notions] of self and other in their minds, and they became arrogant. They said, “My form is superior! Your form isn’t equal to mine!” We fought because of arrogance about our forms, and the flavor of the earth disappeared.
 {:#p103}
 
-104\. “‘Then, the earth skin grew, and it’s form, aroma, and flavor were perfect. Once again, we took it and ate, and we lived in the world for a long time. Those that often ate it became cruder in appearance, and those that seldom ate it were still shiny in appearance. Sentient beings held [notions] of self and other in their minds, and they became arrogant. They said, “My form is superior! Your form isn’t equal to mine!” We fought because of arrogance about our forms, and the earth skin disappeared.
+104\. “‘Then, the earth skin grew, and its form, aroma, and flavor were perfect. Once again, we took it and ate, and we lived in the world for a long time. Those that often ate it became cruder in appearance, and those that seldom ate it were still shiny in appearance. Sentient beings held [notions] of self and other in their minds, and they became arrogant. They said, “My form is superior! Your form isn’t equal to mine!” We fought because of arrogance about our forms, and the earth skin disappeared.
 {:#p104}
 
-105\. “‘Then, the earth crust grew, becoming a cruder substance, but it’s color, aroma, and flavor were perfect. Once again, we took it and ate, and we lived in the world for a long time. Those that often ate it became cruder in appearance, and those that seldom ate it were still shiny in appearance. Sentient beings held [notions] of self and other in their minds, and they became arrogant. They said, “My form is superior! Your form isn’t equal to mine!” We fought because of arrogance about our forms, and the earth crust disappeared.
+105\. “‘Then, the earth crust grew, becoming a cruder substance, but its color, aroma, and flavor were perfect. Once again, we took it and ate, and we lived in the world for a long time. Those that often ate it became cruder in appearance, and those that seldom ate it were still shiny in appearance. Sentient beings held [notions] of self and other in their minds, and they became arrogant. They said, “My form is superior! Your form isn’t equal to mine!” We fought because of arrogance about our forms, and the earth crust disappeared.
 {:#p105}
 
-106\. “‘Then, spontaneous rice grew, and it’s color, aroma, and flavor were perfect. Again, we took and ate it. When we gathered it in the morning, it was ripe again by evening. When we gathered it in the evening, and it was ripe again by morning. We would gather it, and it would grow back when we didn’t store what we gathered. It grew chaff and husks when we competed with each other’s stockpiles, and then it didn’t grow back when we gathered it. It turned to withered stalks. Now, we ought to assign fields to houses and make boundaries between the fields.’ They then divide the land into different demarcated fields and assign them to others and themselves.
+106\. “‘Then, spontaneous rice grew, and its color, aroma, and flavor were perfect. Again, we took and ate it. When we gathered it in the morning, it was ripe again by evening. When we gathered it in the evening, and it was ripe again by morning. We would gather it, and it would grow back when we didn’t store what we gathered. It grew chaff and husks when we competed with each other’s stockpiles, and then it didn’t grow back when we gathered it. It turned to withered stalks. Now, we ought to assign fields to houses and make boundaries between the fields.’ They then divide the land into different demarcated fields and assign them to others and themselves.
 {:#p106}
 
 #### Law and Crime Are Invented
@@ -451,7 +451,7 @@ Being able to bring together the other castes.\\
 Those who completely accomplish insight,\\
 Are the best among gods and humans!’”
 
-131\. The Buddha told the monks, “That verse that Brahma says is well spoken, not unskillfully spoken. It’s well put, not unskillfully put. I approve of it. Why is that? Now, I am the Tathāgata, Arhat, and Completely Awakened One, and I also say this verse:
+131\. The Buddha told the monks, “That verse that Brahmā says is well spoken, not unskillfully spoken. It’s well put, not unskillfully put. I approve of it. Why is that? Now, I am the Tathāgata, Arhat, and Completely Awakened One, and I also say this verse:
 {:#p131}
 
 * {:.verse} “Those born of warriors are the best,\\
