--- a/01_agama/dirgha/DA_30-2.md
+++ b/01_agama/dirgha/DA_30-2.md
@@ -64,7 +64,7 @@ next: DA_30-3.html
 
 #### Lake Sudarśana
 
-17\. “That land has a lake named Sudarśana that’s a hundred yojanas across. Its water is clear and unpolluted, and it’s ringed by stepped embankments made of the seven treasures. The lake has on all four sides seven balustrades, seven nettings, and seven rows of trees … and countless birds sing to each other peacefully as before. That Lake Sudarśana has a tree to its north named Āmra, which is 3.5 kilometers around and stands fifty kilometers tall. It’s branches and leaves spread out in all four directions to cover twenty-five kilometers.
+17\. “That land has a lake named Sudarśana that’s a hundred yojanas across. Its water is clear and unpolluted, and it’s ringed by stepped embankments made of the seven treasures. The lake has on all four sides seven balustrades, seven nettings, and seven rows of trees … and countless birds sing to each other peacefully <em>as before</em>. That Lake Sudarśana has a tree to its north named Āmra, which is 3.5 kilometers around and stands fifty kilometers tall. It’s branches and leaves spread out in all four directions to cover twenty-five kilometers.
 {:#p17}
 
 18\. “The Sugati River flows east from Lake Sudarśana, and it’s a yojana wide. Its current flows gently without any rapids, and it’s covered with many flowers that float downstream smoothly. That river flows between two rows of various trees. Their branches are flexible, and their flowers and fruit are bountiful. Lush grass grows in clockwise coils on the land. It has the color of a peacock or a kingfisher and the fragrance of vārṣika flowers, and it’s soft as heavenly cloth. The ground is also soft to walk on. The earth sinks four inches and then springs back when one lifts their foot. The land is level like the palm of a hand, without any high or low points.
