--- a/01_agama/dirgha/DA_30-4.md
+++ b/01_agama/dirgha/DA_30-4.md
@@ -525,7 +525,7 @@ Which resulted from his bad intent and words.’”
 
 #### King Yama
 
-120\. The Buddha told the monks, “King Yama’s palace is inside the great diamond mountain south of Jambudvīpa. That king rules an area that’s 6,000 yojanas across. His city has seven walls, seven balustrades, seven nettings, and seven rows of trees … and countless birds sing to each other peacefully as before.
+120\. The Buddha told the monks, “King Yama’s palace is inside the great diamond mountain south of Jambudvīpa. That king rules an area that’s 6,000 yojanas across. His city has seven walls, seven balustrades, seven nettings, and seven rows of trees … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p120}
 
 121\. “Every three days and nights, a large copper cauldron spontaneously appears in front of that King Yama. If the cauldron appears inside his palace, the King is frightened when he sees it and leaves his palace. If the cauldron appears outside his palace, the king is frightened when he sees it and goes inside his palace.
