--- a/01_agama/dirgha/DA_30-5.md
+++ b/01_agama/dirgha/DA_30-5.md
@@ -20,25 +20,25 @@ next: DA_30-6.html
 
 #### The Palaces of Nāgas and Garuḍas
 
-3\. “At the bottom of the great ocean, the Nāga King Sāgara has a palace that’s 80,000 <em>yojana</em>s across. That palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+3\. “At the bottom of the great ocean, the Nāga King Sāgara has a palace that’s 80,000 <em>yojana</em>s across. That palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p3}
 
-4\. “Between Sumeru the mountain king and Mount Khadiraka, the <em>nāga</em> kings Nanda and Upananda have their two palaces. Each is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+4\. “Between Sumeru the mountain king and Mount Khadiraka, the <em>nāga</em> kings Nanda and Upananda have their two palaces. Each is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p4}
 
 5\. “On the north shore of the great ocean, there’s a great tree called Kūṭaśālmali that’s shared between the <em>nāga</em> kings and <em>garuḍa</em>s. The area under the tree is seven <em>yojana</em>s around, and it’s a hundred <em>yojana</em>s tall. Its leaves and limbs spread out in all four directions to cover fifty <em>yojana</em>s.
 {:#p5}
 
-6\. “To the east of this great tree, there’s an egg-born <em>nāga</em> king’s palace and an egg-born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+6\. “To the east of this great tree, there’s an egg-born <em>nāga</em> king’s palace and an egg-born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p6}
 
-7\. “To the south of the tree Kūṭaśālmali, there’s a womb-born <em>nāga</em> king’s palace and a womb-born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+7\. “To the south of the tree Kūṭaśālmali, there’s a womb-born <em>nāga</em> king’s palace and a womb-born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p7}
 
-8\. “To the west of the tree Kūṭaśālmali, there’s a moisture-born <em>nāga</em> king’s palace and a moisture-born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+8\. “To the west of the tree Kūṭaśālmali, there’s a moisture-born <em>nāga</em> king’s palace and a moisture-born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p8}
 
-9\. “To the north of that tree Kūṭaśālmali, there’s a spontaneously born <em>nāga</em> king’s palace and a spontaneously born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+9\. “To the north of that tree Kūṭaśālmali, there’s a spontaneously born <em>nāga</em> king’s palace and a spontaneously born <em>garuḍa</em>’s palace. Each of their palaces is 6,000 <em>yojana</em>s across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees that encircle them with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p9}
 
 #### The Way Garuḍas Hunt Nāgas
