--- a/01_agama/dirgha/DA_30-6.md
+++ b/01_agama/dirgha/DA_30-6.md
@@ -15,13 +15,13 @@ next: DA_30-7.html
 1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “The Asura Rāhu’s city is on the coast north of Mount Sumeru. It’s 80,000 yojanas across and has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The walls are 3,000 yojanas tall and 2,000 yojanas wide.
 {:#p1}
 
-2\. “The city gates are 1,000 yojanas tall and 1,000 yojanas wide. The gold walls have silver gates, the silver walls have gold gates … and countless birds sing to each other peacefully as before.
+2\. “The city gates are 1,000 yojanas tall and 1,000 yojanas wide. The gold walls have silver gates, the silver walls have gold gates … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p2}
 
 3\. “That asura king governs a smaller city inside that large city called \*Kṣemāvatī, which is 60,000 yojanas across. It has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The walls are 3,000 yojanas tall and 2,000 yojanas wide.
 {:#p3}
 
-4\. “The city gates are 1,000 yojanas tall and 1,000 yojanas wide. The gold walls have silver gates, the silver walls have gold gates … and countless birds sing to each other peacefully as before.
+4\. “The city gates are 1,000 yojanas tall and 1,000 yojanas wide. The gold walls have silver gates, the silver walls have gold gates … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p4}
 
 5\. “Inside that city, a separate discussion hall was built called Saptaśirīṣa. The hall has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. The foundation of that hall is made of coral.
@@ -33,13 +33,13 @@ next: DA_30-7.html
 7\. “Beneath these pillars, there’s a throne of the correct Dharma that’s 700 yojanas across, and it’s inlaid with carvings made of the seven treasures.
 {:#p7}
 
-8\. “The hall has four doors, and it’s encircled with balustrades. There are seven stairs, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+8\. “The hall has four doors, and it’s encircled with balustrades. There are seven stairs, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p8}
 
-9\. “North of that discussion hall, there’s an asura palace that’s 10,000 yojanas across. The palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+9\. “North of that discussion hall, there’s an asura palace that’s 10,000 yojanas across. The palace has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p9}
 
-10\. “East of that discussion hall, there’s a forest park called Śāla, which is 10,000 yojanas across. That park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+10\. “East of that discussion hall, there’s a forest park called Śāla, which is 10,000 yojanas across. That park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p10}
 
 11\. “South of that discussion hall, there’s a forest park called Most Marvelous, which is 10,000 yojanas across and like Śāla Park.
@@ -51,7 +51,7 @@ next: DA_30-7.html
 13\. “North of that discussion hall, there’s a forest park called Nandana, which is 10,000 yojanas across and also like Śāla Park.
 {:#p13}
 
-14\. “Between Śāla Park and Most Marvelous Park grows a Pārijāta tree, which covers are area of seven yojanas and stands a hundred yojanas tall. Its limbs and leaves spread out in all four directions to cover fifty yojanas. That tree has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+14\. “Between Śāla Park and Most Marvelous Park grows a Pārijāta tree, which covers are area of seven yojanas and stands a hundred yojanas tall. Its limbs and leaves spread out in all four directions to cover fifty yojanas. That tree has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p14}
 
 15\. “Between Śālmalī Park and Nandana Park, there’s Lake Upananda. Its water is clear and unpolluted. It’s ringed by seven stepped embankments made of treasures, and it has seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures.
@@ -60,13 +60,13 @@ next: DA_30-7.html
 16\. “In that lake grow four kinds of flowers with petals that are a yojana wide, and their sweet fragrance fills an area of a yojana. Their roots are like cart axles and produce sap that’s white as milk and tastes sweet as honey. Countless birds sing to each other peacefully as before.
 {:#p16}
 
-17\. “On the shores of that lake are seven stair steps, seven gated walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+17\. “On the shores of that lake are seven stair steps, seven gated walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p17}
 
-18\. “That asura king’s ministers have lower palaces that are 10,000 yojanas across … 9,000 … 8,000 … the smallest palace is 1,000 yojanas across. These palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+18\. “That asura king’s ministers have lower palaces that are 10,000 yojanas across … 9,000 … 8,000 … the smallest palace is 1,000 yojanas across. These palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p18}
 
-19\. “The lesser asuras have palaces that are 1,000 yojanas across … 900 … 800 … the smallest palaces are a hundred yojanas across. These palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+19\. “The lesser asuras have palaces that are 1,000 yojanas across … 900 … 800 … the smallest palaces are a hundred yojanas across. These palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p19}
 
 20\. “North of that discussion hall, there’s a stairway made of the seven treasures that leads into the palace. There’s a stairway that leads to Śāla Park. There’s a stairway that leads to Most Marvelous Park. There’s a stairway that leads to Śālmalī Park. There’s a stairway that leads to Nandana Park. There’s a stairway that leads to the Pārijāta tree. There’s a stairway that leads to Lake Upananda. There’s a stairway that leads to the great minister’s palace. There’s also a stairway that leads to the palaces of lesser asuras.
