--- a/01_agama/dirgha/DA_30-8.md
+++ b/01_agama/dirgha/DA_30-8.md
@@ -81,7 +81,7 @@ next: DA_30-9.html
 23\. “Four types of flowers grow in that lake: Blue, yellow, red, and white. Other colors like crimson and light blue are mixed with them, too. A single petal of those flowers is a yojana long, and their fragrance is sweet-smelling a yojana away. Their roots are like wheel hubs, and they produce sap that’s as white as milk and tastes as sweet as honey. That lake also has forest parks on all four sides.
 {:#p23}
 
-24\. “Between Miśrakā Park and Nandana Park, there’s a tree called Pārijāta that’s seven yojanas around and a hundred yojanas tall. It’s limbs and leaves spread out in all four directions to cover fifty yojanas. There’s open ground around the tree that’s five hundred yojanas across. It then has seven palace walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
+24\. “Between Miśrakā Park and Nandana Park, there’s a tree called Pārijāta that’s seven yojanas around and a hundred yojanas tall. Its limbs and leaves spread out in all four directions to cover fifty yojanas. There’s open ground around the tree that’s five hundred yojanas across. It then has seven palace walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p24}
 
 25\. “The remaining Trāyastriṃśa Heaven palace halls are 1,000 yojanas across. The palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
@@ -364,7 +364,7 @@ next: DA_30-9.html
 108\. “Suppose the four god kings see that the world’s people are dutiful to their parents, honor and serve their elders, diligently cultivate the fasting rules, and aid the poor. They return to the Sudharma Hall and tell Lord Śakra, ‘The world’s people are dutiful to their parents, honor and serve their elders, diligently cultivate the fasting rules, and aid the poor.’
 {:#p108}
 
-109\. “When they hear this, Lord Śakra and the Trāyastriṃśa gods rejoice. They exclaim, ‘Excellent! The world’s people are dutiful to their parents, honor and serve their elders, diligently cultivate the fasting rules, and aid the poor. The host of gods will grow, and the host of asuras will dwindle!’ This is why there’s a fast on the fifteenth day fast.
+109\. “When they hear this, Lord Śakra and the Trāyastriṃśa gods rejoice. They exclaim, ‘Excellent! The world’s people are dutiful to their parents, honor and serve their elders, diligently cultivate the fasting rules, and aid the poor. The host of gods will grow, and the host of asuras will dwindle!’ This is why there’s a fast on the fifteenth day.
 {:#p109}
 
 110\. “These are the reasons for these three fasts.
@@ -405,10 +405,10 @@ Will become my equals!’”
 117\. The Buddha told the monks, “Suppose there are practitioners from other religions who ask, ‘Gentlemen, suppose that all men and women have yakṣa spirits who follow them as protectors from when they are first born. When they’re about to die, those guardian yakṣa spirits take their spirits, and then they die. Why are there yakṣa spirits who harass people, or are there no yakṣa spirits who harass people?’
 {:#p117}
 
-118\. “Supposing someone asks this question, you should answer in this way, ‘Worldly people do things contrary to the Dharma, become deluded by wrong views, and commit the ten bad deeds. There may be only one yakṣa spirit for every hundred or thousand of these people, just as a herd of a hundred or a thousand cattle or sheep has only one a person tending it. Those yakṣa spirits are likewise for people who act contrary to the Dharma, become deluded by wrong views, and commit the ten bad deeds. There’s only one spirit guarding a hundred or a thousand of those people.
+118\. “Supposing someone asks this question, you should answer in this way, ‘Worldly people do things contrary to the Dharma, become deluded by wrong views, and commit the ten bad deeds. There may be only one <em>yakṣa</em> spirit for every hundred or thousand of these people, just as a herd of a hundred or a thousand cattle or sheep has only one a person tending it. Those <em>yakṣa</em> spirits are likewise for people who act contrary to the Dharma, become deluded by wrong views, and commit the ten bad deeds. There’s only one spirit guarding a hundred or a thousand of those people.
 {:#p118}
 
-119\. “Suppose there are people who practice the good Dharma, who’s views are correct and act according to their belief, and who perfect the ten good deeds. One such person has a hundred or a thousand spirits protecting them, just as the king or a king’s minister has a hundred or a thousand people guarding them. They are likewise. A single person who practices the good Dharma and perfects the ten good deeds has a hundred or a thousand spirits protecting them. As a result of this, some worldly people are harassed by yakṣa spirits, and some are not harassed by them.”
+119\. “‘Suppose there are people who practice the good Dharma, who’s views are correct and act according to their belief, and who perfect the ten good deeds. One such person has a hundred or a thousand spirits protecting them, just as the king or a king’s minister has a hundred or a thousand people guarding them. They are likewise. A single person who practices the good Dharma and perfects the ten good deeds has a hundred or a thousand spirits protecting them. As a result of this, some worldly people are harassed by yakṣa spirits, and some are not harassed by them.’”
 {:#p119}
 
 #### Comparing Various Places to Jambudvīpa
@@ -491,7 +491,7 @@ Will become my equals!’”
 143\. The Buddha told the monks, “That time I spoke with the earth spirit, I successively taught her the Dharma, removed her bad view by teaching, instructing, profiting, and delighting her. I discussed generosity, precepts, how to be born in heaven, that desire is impure, and the trouble of the higher contaminants. [I praised] escaping [desire] as the [most subtle, pure, and] supreme thing. I broadly explained and revealed the pure religious life to her. I then knew that her mind was pure, gentle, gladdened, devoid of the hindrances, and easy to teach. According to the eternal way of buddhas, I taught the noble truth of suffering and the truths of suffering’s formation, suffering’s cessation, and suffering’s escape. I explained them broadly for her.
 {:#p143}
 
-144\. “The earth spirit became removed from dust and free of defilement right there on her seat, and her vision of the Dharma was purified. The earth spirit was like white cloth that readily accepts a dye. Her faith was purified, and she attained the Dharma eye without any doubts. Seeing the Dharma with certainty, she didn’t fall to the unpleasant destinies, nor did she set out on some other path. Achieving fearlessness, she said to me, ‘I now take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. I won’t kill, steal, engage in sex, lie, or drink alcohol for the rest of my life. Permit me to become an laywoman in the correct Dharma.’”
+144\. “The earth spirit became removed from dust and free of defilement right there on her seat, and her vision of the Dharma was purified. The earth spirit was like white cloth that readily accepts a dye. Her faith was purified, and she attained the Dharma eye without any doubts. Seeing the Dharma with certainty, she didn’t fall to the unpleasant destinies, nor did she set out on some other path. Achieving fearlessness, she said to me, ‘I now take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. I won’t kill, steal, engage in sex, lie, or drink alcohol for the rest of my life. Permit me to become a laywoman in the correct Dharma.’”
 {:#p144}
 
 145\. The Buddha told the monks, “Once, the water spirit had a bad view. She said, ‘There’s no earth, fire, or wind in water.’
@@ -508,7 +508,7 @@ Will become my equals!’”
 148\. The Buddha told the monks, “The earth spirit taught the Dharma for the water spirit, removing her bad view by teaching, instructing, profiting, and delighting her. She discussed generosity, precepts, how to be born in heaven, that desire is impure, and the trouble of the higher contaminants. [She praised] escaping [desire] as the [most subtle, pure, and] supreme thing. She broadly explained and revealed the pure religious life to her. The earth spirit then knew that the water spirit’s mind was gentle, gladdened, confident, purified, devoid of the hindrances, and easy to teach. According to the eternal way of buddhas, she taught the noble truth of suffering and the truths of suffering’s formation, suffering’s cessation, and suffering’s escape. She explained them broadly for her.
 {:#p148}
 
-149\. “The water spirit became removed from dust and free of defilement right there on her seat, and her vision of the Dharma was purified. The water spirit was like white cloth that readily accepts a dye. Her faith was purified, and she attained purity of the Dharma eye without any doubts. Attaining the reward of certainty, she didn’t fall to the unpleasant destinies, nor did she set out on some other path. Achieving fearlessness, she told the earth spirit, ‘I now take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. I won’t kill, steal, engage in sex, lie, or drink alcohol for the rest of my life. Permit me to become an laywoman in the correct Dharma.’”
+149\. “The water spirit became removed from dust and free of defilement right there on her seat, and her vision of the Dharma was purified. The water spirit was like white cloth that readily accepts a dye. Her faith was purified, and she attained purity of the Dharma eye without any doubts. Attaining the reward of certainty, she didn’t fall to the unpleasant destinies, nor did she set out on some other path. Achieving fearlessness, she told the earth spirit, ‘I now take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. I won’t kill, steal, engage in sex, lie, or drink alcohol for the rest of my life. Permit me to become a laywoman in the correct Dharma.’”
 {:#p149}
 
 150\. The Buddha told the monks, “Once, the fire spirit had a bad view. She said, ‘There’s no earth, water, or wind in fire.’
@@ -519,19 +519,19 @@ Will become my equals!’”
 
 “The fire spirit replied, ‘It really did.’
 
-152\. “Both spirits said, ‘Don’t have this view [that there’s no earth, water, or wind in fire.] Why is that? There’s earth, water, and wind in fire. It’s only because there’s much more fire present that it’s called the fire element.’”
+152\. “Both spirits said, ‘Don’t have this view [that there’s no earth, water, or wind in fire.] Why is that? There’s earth, water, and wind in fire. It’s only because there’s much more fire present that it’s called the fire element.’
 {:#p152}
 
 153\. “Those two spirits [successively] taught the fire spirit the Dharma, removing her bad view by teaching, instructing, profiting, and delighting her. They discussed generosity, precepts, how to be born in heaven, that desire is impure, and the trouble of the higher contaminants. [They praised] escaping desire as the [most subtle, pure, and] supreme thing. They broadly explained and revealed the pure religious life to her. Those two spirits then knew that the fire spirit’s mind was gentle, gladdened, confident, pure, devoid of the hindrances, and easy to teach. According to the eternal way of buddhas, they taught the noble truth of suffering and the truths of suffering’s formation, suffering’s cessation, and suffering’s escape. They explained them broadly for her.
 {:#p153}
 
-154\. “The fire spirit became removed from dust and free of defilement [right there on her seat], and her vision of the Dharma was purified. The fire spirit was like white cloth that readily accepts a dye. Her faith was purified, and she attained the Dharma eye without any doubts. Attaining the reward of certainty, she didn’t fall to the unpleasant destinies, nor did she set out on some other path. Achieving fearlessness, she told the two spirits, ‘I now take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. I won’t kill, steal, engage in sex, lie, or drink alcohol for the rest of my life. Permit me to become an laywoman in the correct Dharma.’”
+154\. “The fire spirit became removed from dust and free of defilement [right there on her seat], and her vision of the Dharma was purified. The fire spirit was like white cloth that readily accepts a dye. Her faith was purified, and she attained the Dharma eye without any doubts. Attaining the reward of certainty, she didn’t fall to the unpleasant destinies, nor did she set out on some other path. Achieving fearlessness, she told the two spirits, ‘I now take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. I won’t kill, steal, engage in sex, lie, or drink alcohol for the rest of my life. Permit me to become a laywoman in the correct Dharma.’”
 {:#p154}
 
 155\. The Buddha told the monks, “Once, the wind spirit had a bad view. She said, ‘There’s no earth, water, or fire in wind.’
 {:#p155}
 
-156\. “The earth, water, and fire spirits knew this thought that the wind spirit had, so they went to her and said, ‘Has this view really occurred to you, “There’s no earth, water, or fire in wind?”’
+156\. “The earth, water, and fire spirits knew this thought that the wind spirit had, so they went to her and said, ‘Has this view really occurred to you, “There’s no earth, water, or fire in wind”?’
 {:#p156}
 
 “The wind spirit replied, ‘It really did.’
@@ -542,7 +542,7 @@ Will become my equals!’”
 158\. The Buddha told the monks, “Those three spirits [successively] taught the wind spirit the Dharma, removed her bad view by teaching, instructing, profiting, and delighting her. They discussed generosity, precepts, how to be born in heaven, that desire is impure, and the trouble of the higher contaminants. [They praised] escaping desire as the [most subtle, pure, and] supreme thing. They broadly explained and revealed the pure religious life to her. Those three spirits then knew that the wind spirit’s mind was gentle, gladdened, confident, pure, devoid of the hindrances, and easy to teach. According to the eternal way of buddhas, they taught the noble truth of suffering and the truths of suffering’s formation, suffering’s cessation, and suffering’s escape. They explained them broadly for her.
 {:#p158}
 
-159\. “The wind spirit became removed from dust and free of defilement [right there on her seat], and her vision of the Dharma was purified. The wind spirit was like white cloth that readily accepts a dye. Her faith was purified, and she attained the Dharma eye without any doubts. Attaining the reward of certainty, she didn’t fall to the unpleasant destinies, nor did she set out on some other path. Achieving fearlessness, she told the three spirits, ‘I now take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. I won’t kill, steal, engage in sex, lie, or drink alcohol for the rest of my life. Permit me to become an laywoman in the correct Dharma.’”
+159\. “The wind spirit became removed from dust and free of defilement [right there on her seat], and her vision of the Dharma was purified. The wind spirit was like white cloth that readily accepts a dye. Her faith was purified, and she attained the Dharma eye without any doubts. Attaining the reward of certainty, she didn’t fall to the unpleasant destinies, nor did she set out on some other path. Achieving fearlessness, she told the three spirits, ‘I now take refuge in the Buddha, take refuge in the Dharma, and take refuge in the Saṅgha. I won’t kill, steal, engage in sex, lie, or drink alcohol for the rest of my life. Permit me to become a laywoman in the correct Dharma.’”
 {:#p159}
 
 #### On Clouds, Lightning, and Rain
