--- a/01_agama/dirgha/DA_30-9.md
+++ b/01_agama/dirgha/DA_30-9.md
@@ -164,7 +164,7 @@ next: DA_30-10.html
 48\. “That water continues to subside countless hundreds of thousands of yojanas. A great wind [rises on all four sides of that water, which is] called Saṅgha. It blows the water and agitates it. The crashing of the waves is immense, and a mass of foam accumulates. The wind blows it off of the water and into the sky. It spontaneously hardens there, forming a heavenly palace [decorated with the seven treasures.] As a result of these events, the Yama Heaven’s palace comes to be.
 {:#p48}
 
-49\. “That water continues to subside countless hundreds of thousands of yojanas. The foam on the water is 68,000 yojanas deep, and it’s bounds are endless. It’s like the foam on the water when a stream flows from an underground spring.
+49\. “That water continues to subside countless hundreds of thousands of yojanas. The foam on the water is 68,000 yojanas deep, and its bounds are endless. It’s like the foam on the water when a stream flows from an underground spring.
 {:#p49}
 
 50\. “What are the events that cause Mount Sumeru to come to be? A windstorm rises and blows the water’s foam into the form of Mount Sumeru, 68,000 yojanas tall and 84,000 yojanas across. It’s made of the four treasures of gold, silver, crystal, and beryl.
@@ -245,7 +245,7 @@ next: DA_30-10.html
 73\. “As a result of these causes, the destiny of hell is ended … animals … hungry ghosts … asuras … the four god kings … Ābhāsvara Heaven is ended.
 {:#p73}
 
-74\. “As this happens, hell disappears first, and then animal births disappear after it. After animal births are gone, the hungry ghosts disappear. After the hungry ghosts are gone, the asuras disappear. After the asuras are gone, the four god kings disappear. After the four god kings are gone, the Trāyastriṃśa gods disappear. After the Trāyastriṃśa gods are gone, the Yama gods disappear. After the Yama gods are gone, the Tuṣita gods disappear. After the Tuṣita gods are gone, the Nirmāṇarati gods disappear. After the Nirmāṇarati gods are gone, the Paranirmitavaśavartin gods disappear. After the Paranirmitavaśavartin gods are gone, the Brahma gods disappear. After the Brahma gods are gone, then the Ābhāsvara gods disappear. After the Ābhāsvara gods are gone, then humans disappear with none remaining. After humans are gone with none remaining, the world is destroyed when the catastrophe takes place.”
+74\. “As this happens, hell disappears first, and then animal births disappear after it. After animal births are gone, the hungry ghosts disappear. After the hungry ghosts are gone, the asuras disappear. After the asuras are gone, the four god kings disappear. After the four god kings are gone, the Trāyastriṃśa gods disappear. After the Trāyastriṃśa gods are gone, the Yama gods disappear. After the Yama gods are gone, the Tuṣita gods disappear. After the Tuṣita gods are gone, the Nirmāṇarati gods disappear. After the Nirmāṇarati gods are gone, the Paranirmitavaśavartin gods disappear. After the Paranirmitavaśavartin gods are gone, the Brahma gods disappear. After the Brahma gods are gone, then the Ābhāsvara gods disappear. After the Ābhāsvara gods are gone, then humans disappear with none remaining. After humans are gone with none remaining, the world is destroyed when the catastrophe takes place.
 {:#p74}
 
 75\. “A long, long time after that, a huge black storm rises up to the Śubhakṛtsna Heaven and releases a deluge everywhere. The rain is boiling hot water that cooks the heavens. It washes over all the heavenly palaces there without any exceptions. Like butter put in a fire that’s cooked and melts away until nothing remains, the palace of the Ābhāsvara Heaven is likewise.
