--- a/01_agama/ekottarika/10/EA_10_05.md
+++ b/01_agama/ekottarika/10/EA_10_05.md
@@ -75,7 +75,7 @@ next: EA_10_06.html
 
 <ol class="notes-list">
 <li id="n1"><p>For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T02n0125_p0565a10" target="_blank">T125.2.565a10-b3</a>. [<a href="#ref1">back</a>]</p></li>
-<li id="n2"><p><em>All sentient beings depend on food to continue to live</em>. This famous saying was enshrined in the early <cite>Saṅgiti Sūtra</cite>, as it’s found in all extant versions as the core item of the Ones section, but direct commentaries on its meaning are difficult to find. Here, it serves as the reason for developing a broader sense of generosity for all living things, not just monks and nuns. It also appears to draw inspiration from the bodhisattva’s perfection of giving, as we’ll see below. [<a href="#ref2">back</a>]</p></li>
+<li id="n2"><p><em>All sentient beings depend on food to continue to live</em>. This famous saying was enshrined in the early <cite>Saṅgiti Sūtra</cite>, as it’s found in all extant versions as the core item of the Ones section, but direct commentaries on its meaning are difficult to find. Here, it serves as the reason for developing a broader sense of generosity for all sentient beings, not just monks and nuns. It also appears to draw inspiration from the bodhisattva’s perfection of giving, as we’ll see below. [<a href="#ref2">back</a>]</p></li>
 </ol>
 <hr/>
 
