--- a/01_agama/ekottarika/16/EA_16_01.md
+++ b/01_agama/ekottarika/16/EA_16_01.md
@@ -49,7 +49,7 @@ next: EA_16_02.html
   </tr>
   <tr>
     <td class='ch' title='t125.2.578b1'>是時，王波斯匿聞是語已，便懷愁憂。 即乘駕白象，往至彼園。 到已，便入華象池中。 遙見尊者難陀，便前至難陀所，頭面禮足，在一面坐。</td>
-    <td id='p6'>6. When he heard this said, King Presenajit felt aggrieved. He rode his white elephant to that park. Arriving there, he waded into Lake Nāgapuṣpa. Seeing him from afar, he walked up to Venerable Nanda, bowed his head at his feet, and then sat to one side.</td>
+    <td id='p6'>6. When he heard this said, King Prasenajit felt aggrieved. He rode his white elephant to that park. Arriving there, he waded into Lake Nāgapuṣpa. Seeing him from afar, he walked up to Venerable Nanda, bowed his head at his feet, and then sat to one side.</td>
   </tr>
   <tr>
     <td class='ch' title='t125.2.578b4'>爾時，尊者難陀告波斯匿曰： 「大王，何故來至此間，顏色變異？ 復有何事來至吾所？」</td>
