--- a/01_agama/madhyama/MA_013.md
+++ b/01_agama/madhyama/MA_013.md
@@ -35,7 +35,7 @@ next: MA_015.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.435b7'>「我復語彼： 『若如是者，諸賢等皆是殺生。 所以者何？ 以其一切，皆因宿命造故。 如是，諸賢皆是不與取⋯邪婬⋯妄言⋯乃至⋯邪見。 所以者何？ 以其一切，皆因宿命造故。</td>
-    <td id='p5'>5. “I would again say to them, ‘If that’s so, then you Venerables are all killers of living things. Why is that? Because the cause of all that is created by your previous lives. Thus, you Venerables take what’s not given … engage in wrong sex … speak falsely … <em>up to</em> … have wrong views. Why is that? Because the cause of all that is created by your previous lives.</td>
+    <td id='p5'>5. “I would again say to them, ‘If that’s so, then you Venerables are all killers of beings. Why is that? Because the cause of all that is created by your previous lives. Thus, you Venerables take what’s not given … engage in wrong sex … speak falsely … <em>up to</em> … have wrong views. Why is that? Because the cause of all that is created by your previous lives.</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.435b11'>「『諸賢，若一切皆因宿命造見如真者，於內因內，作以不作。 都無欲、無方便。 諸賢，若於作以不作，不知如真者，便失正念、無正智。 則無可以教，』 如沙門法如是說者，乃可以理伏彼沙門、梵志。</td>
@@ -51,7 +51,7 @@ next: MA_015.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.435b19'>「我復語彼： 『若如是者，諸賢等皆是殺生。 所以者何？ 以其一切，皆因尊祐造故。 如是，諸賢，皆是不與取⋯邪婬⋯妄言⋯乃至⋯邪見。 所以者何？ 以其一切，皆因尊祐造故。</td>
-    <td id='p8'>8. “Again, I would say to them, ‘If that’s so, Venerables, all of you are killers of living things. Why is that? Because the cause of all that is created by God. Thus, Venerables, you take what’s not given … engage in wrong sex … speak falsely  … <em>up to</em> … have wrong views. Why is that? Because the cause of all that is created by God.</td>
+    <td id='p8'>8. “Again, I would say to them, ‘If that’s so, Venerables, all of you are killers of beings. Why is that? Because the cause of all that is created by God. Thus, Venerables, you take what’s not given … engage in wrong sex … speak falsely  … <em>up to</em> … have wrong views. Why is that? Because the cause of all that is created by God.</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.435b22'>「『諸賢，若一切皆因尊祐造見如真者，於內因內，作以不作。 都無欲、無方便。 諸賢，若於作以不作，不知如真者，便失正念、無正智。 則無可以教。』 如沙門法如是說者，乃可以理伏彼沙門、梵志。</td>
@@ -67,7 +67,7 @@ next: MA_015.html
   </tr>
   <tr>
     <td class="ch" title='t26.1.435c1'>「我復語彼： 『若如是者，諸賢等皆是殺生。 所以者何？ 以其一切，皆無因無緣故。 如是，諸賢，皆是不與取⋯邪婬⋯妄言⋯乃至⋯邪見。 所以者何？ 以其一切，皆無因無緣故。</td>
-    <td id='p11'>11. “Again, I would say to them, ‘If that’s so, Venerables, all of you are killers of living beings. Why is that? Because there’s no cause or condition for any of that. Thus, Venerables, you take what’s not given … engage in wrong sex … speak falsely … <em>up to</em> … have wrong views. Why is that? Because there’s no cause or condition for any of that.</td>
+    <td id='p11'>11. “Again, I would say to them, ‘If that’s so, Venerables, all of you are killers of beings. Why is that? Because there’s no cause or condition for any of that. Thus, Venerables, you take what’s not given … engage in wrong sex … speak falsely … <em>up to</em> … have wrong views. Why is that? Because there’s no cause or condition for any of that.</td>
   </tr>
   <tr>
     <td class="ch" title='t26.1.435c5'>「『諸賢，若一切皆無因無緣，見如真者，於內因內，作以不作。 都無欲、無方便。 諸賢，若於作以不作，不知如真者，便失正念、無正智。 則無可以教。』 如沙門法如是說者，乃可以理伏彼沙門、梵志。</td>
