--- a/01_agama/madhyama/MA_016.md
+++ b/01_agama/madhyama/MA_016.md
@@ -48,7 +48,7 @@ next: MA_017.html
 
 ### Ten Good Deeds
 
-12\. “Kālāmas, the well-versed noble disciple parts with killing, stops killing, and discards weapons. With conscience, modesty, and compassion, they are beneficial to all living things, even insects and worms. They purify their mind and rid it of killing living things.
+12\. “Kālāmas, the well-versed noble disciple parts with killing, stops killing, and discards weapons. With conscience, modesty, and compassion, they are beneficial to all beings, even insects and worms. They purify their mind and rid it of killing beings.
 {:#p12}
 
 13\. “Kālāmas, the well-versed noble disciple parts with taking what’s not given, stops taking what’s not given, and only takes what is given. They are happy with taking what is given and always like generosity. Rejoicing in having no stinginess, they don’t expect any reward. They purify their mind and rid it of taking what’s not given.
@@ -72,7 +72,7 @@ next: MA_017.html
 19\. “Kālāmas, the well-versed noble disciple is free of longing and stops longing. They don’t harbor disputes in their mind. Seeing the valuables and requisites for living of others, they don’t long for or wish to obtain them for themselves. They purify their mind and rid it of longing.
 {:#p19}
 
-20\. “Kālāmas, the well-versed noble disciple is free of hatred and stops hatred. With conscience, modesty, and compassion, they’re beneficial to all living things, even insects and worms. They purify their mind and rid it of hatred.
+20\. “Kālāmas, the well-versed noble disciple is free of hatred and stops hatred. With conscience, modesty, and compassion, they’re beneficial to all beings, even insects and worms. They purify their mind and rid it of hatred.
 {:#p20}
 
 21\. “Kālāmas, the well-versed noble disciple is free of wrong view and stops wrong view. They conduct themselves in right view and aren’t mistaken. Such is their view, and such is their speech: ‘There’s generosity, purification, and incantations. There’s the results of good and bad actions. There’s the present world and another world. There’s father and mother. The world truly has people who depart and go to good places, good departures, and good headings. In this world and the next, they accomplish and dwell in their own knowledge, perception, and realization.’ They purify their mind and rid it of wrong views.
