--- a/01_agama/madhyama/MA_072.md
+++ b/01_agama/madhyama/MA_072.md
@@ -335,7 +335,7 @@ If it’s happy dwelling alone in the forest.”
 79\. At the time, the [Pācīnavaṃsa] temple grove had three clansmen living in it: Venerable Aniruddha, Venerable Nandika, and Venerable Kimbila. Those venerables were practicing in this way: If they solicited food, the one who returned first then prepared seats, and he fetched the water and foot-washing basin. He calmly washed his feet and wiped down his legs with a cloth. He then rinsed out the water jug. If he could eat all the food he solicited, then he ate it all. If some was leftover, he put it in a covered container and set it up high. When the meal was finished, he collected his bowl, washed his hands and feet, and put his sitting mat over his shoulder. He then entered his dwelling to sit quietly.
 {: #p79}
 
-80\. If they solicit alms, the last one to return ate all his food if he could. If it wasn’t enough, he took from the leftover food to have enough to eat. If some was leftover, then he dumped it on clean ground or in water where there were no living things. He then took the others’ food containers and put them to one side after cleaning and wiping them. He rolled up his sitting mat, washed his feet, wiped his legs with a cloth, and put away the foot-washing basin. He also rinsed out the water jug and swept the dining room. After throwing out the refuse and cleaning, he collected his robes and bowl, washed his hands and feet, put his sitting mat over his shoulder, and entered his dwelling to sit quietly.
+80\. If they solicit alms, the last one to return ate all his food if he could. If it wasn’t enough, he took from the leftover food to have enough to eat. If some was leftover, then he dumped it on clean ground or in water where there were no beings. He then took the others’ food containers and put them to one side after cleaning and wiping them. He rolled up his sitting mat, washed his feet, wiped his legs with a cloth, and put away the foot-washing basin. He also rinsed out the water jug and swept the dining room. After throwing out the refuse and cleaning, he collected his robes and bowl, washed his hands and feet, put his sitting mat over his shoulder, and entered his dwelling to sit quietly.
 {: #p80}
 
 81\. Those venerables would do that until late afternoon. If the first one to emerge from his quiet sitting saw the water jug or the wash basin was empty, then he picked it up. If another was more able, then he would point it out when they came along and set it safely to one side. If another wasn’t more able, then one monk picked them up, or two people lifted them together, and put them to one side. They didn’t say anything to each other nor ask questions while they did that. Those venerables would have a meeting every five days. Sometimes they would discuss the Dharma, and other times they would be nobly silent.
