--- a/01_agama/madhyama/MA_080.md
+++ b/01_agama/madhyama/MA_080.md
@@ -72,7 +72,7 @@ Venerable Aniruddha said, “Very well, Bhagavān!”
 
 #### The Twenty Renunciations
 
-16\. “Good men, I parted with killing, stopped killing, and discarded blades and bludgeons. With conscience and modesty and with kindness and compassion, I was beneficial to all living things, even insects and worms. I purified my mind and rid it of killing living things.
+16\. “Good men, I parted with killing, stopped killing, and discarded blades and bludgeons. With conscience and modesty and with kindness and compassion, I was beneficial to all beings, even insects and worms. I purified my mind and rid it of killing beings.
 {: #p16}
 
 17\. “Good men, I parted with taking what’s not given, stopped taking what’s not given, and accepted what was given. I was happy with taking what was given and always liked generosity. Rejoicing in having no stinginess, I didn’t expect any reward. I purified my mind and rid it of taking what’s not given.
