--- a/01_agama/madhyama/MA_146.md
+++ b/01_agama/madhyama/MA_146.md
@@ -79,7 +79,7 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 
 #### The Twenty Renunciations
 
-20\. “He parts with killing, stops killing, and he discards blades and bludgeons. With conscience and modesty and with kindness and compassion, he’s beneficial to all living things, even insects and worms. He purifies his mind and rids it of killing living things.
+20\. “He parts with killing, stops killing, and he discards blades and bludgeons. With conscience and modesty and with kindness and compassion, he’s beneficial to all beings, even insects and worms. He purifies his mind and rids it of killing beings.
 {:#p20}
 
 21\. “He parts with taking what’s not given, stops taking what’s not given, and takes after something is given. He’s happy with taking what’s given and always likes generosity. Rejoicing in having no stinginess, he doesn’t expect any reward. He purifies his mind and rids it of taking what’s not given.
