--- a/01_agama/samyukta/01/SA1_178.md
+++ b/01_agama/samyukta/01/SA1_178.md
@@ -383,7 +383,7 @@ While this version and MN 35 bear a strong resemblance to each other, EĀ 37.10 
 <li id="n4"><em>Aśvajit.</em> C. 阿濕波誓 (EMC. •a-ʃiəp-pua-ʒɪɛi = P. <em>aśpaji</em> or <em>aśvaji</em>), G. <em>*aśpaji</em>, P. <em>assaji</em>, S. <em>aśvajit</em>. The C. translit. matches the G. and S. pronunciations better than P. I’ve adopted the S. equivalent. [<a href="#ref4">back</a>]</li>
 <li id="n5"><em>Satyaka.</em> C. 薩遮 (EMC. sat-tʃɪă = Pr. <em>saca</em>), G. <em>sacaga</em>, P. <em>saccaka</em>, S. <em>satyaka</em>. The C. translit. matches the G. and P. pronunciations best. I’ve adopted the S. equivalent. [<a href="#ref5">back</a>]</li>
 <li id="n6"><em>Agnivaiśyāyana.</em> C. 火種居士, G. <em>*agiveśiya</em>, P. <em>aggivessana</em>, S. <em>agnivaiśyāyana</em>. The C. translates Satyaka’s surname as “fire element householder.” This could be reverse-translated as G. <em>*agiveśiya</em>. In S. sources, <em>veśiya</em> apparently became <em>vaiśyāyana</em>, which would mean something like “coming from the tradesman class” (<em>vaiśya-ayana</em>). The P. equiv. was <em>vessana</em>, but it’s not clear to me what that term’s original meaning might have been. I’ve adopted the S. equivalent. [<a href="#ref6">back</a>]</li>
-<li id="n7"><em>Licchavis.</em> C. 離車 (EMC. lɪĕ-tʃ‘ɪă), G. <em>lichavi</em>, P. <em>licchavi</em>, S. <em>licchavi</em>. This was the name of the warrior (i.e., S. <em>kṣatriya</em>) tribe that lived in the vicinity of Vaiśālī. This well-known C. translit. matches the G. pronunciation as well as the P. and S. (but drops the final syllable as usu.). I’ve adopted the S. equivalent. [<a href="#ref7">back</a>]</li>
+<li id="n7"><em>Licchavis.</em> C. 離車 (EMC. lɪĕ-tʃ‘ɪă), G. <em>lichavi</em>, P/S. <em>licchavi</em>. This was the name of the warrior (i.e., S. <em>kṣatriya</em>) tribe that lived in the vicinity of Vaiśālī. This well-known C. translit. matches the G. pronunciation as well as the P. and S. (but drops the final syllable as usu.). I’ve adopted the S. equivalent. [<a href="#ref7">back</a>]</li>
 <li id="n8">In the P. version, Sacchaka uses four metaphors that are somewhat different: manhandling a sheep, a brewer washing a seive in a lake, a brewer manipulating a strainer, and washing a bull elephant’s ears.<br/>
 In EĀ 37.10, he employs three metaphors: manhandling a sheep, a fierce elephant playing in a deep pond, and a pair of strong men grabbing a weak man and putting him on a bed of hot coals. That version ends quite dramatically with Satyaka claiming he’ll beat Gautama so bad he’ll bleed from his face and die (!).<br/>
 We can see, though, that at least the example of an elephant must date back to some older version that all three had in common. [<a href="#ref8">back</a>]</li>
