--- a/01_agama/dirgha/DA_30-7.md
+++ b/01_agama/dirgha/DA_30-7.md
@@ -12,25 +12,25 @@ next: DA_30-8.html
 ### Chapter 7: The Four God Kings
 #### Geography
 
-1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “A thousand yojanas to the east of Sumeru the mountain king is the God King Dhṛtarāṣṭra’s city named \*Bhadrottamā, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+1\. The Buddha told the monks,[\[1\]](#n1){:#ref1} “A thousand yojanas to the east of Sumeru the mountain king is the God King Dhṛtarāṣṭra’s city named \*Bhadrottamā, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p1}
 
-2\. “A thousand yojanas to the south of Mount Sumeru is the God King Virūḍhaka’s city named Sudarśana, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+2\. “A thousand yojanas to the south of Mount Sumeru is the God King Virūḍhaka’s city named Sudarśana, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p2}
 
-3\. “A thousand yojanas to the west of Mount Sumeru is the God King Virūpākṣa’s city called Cūḷasudarśana, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+3\. “A thousand yojanas to the west of Mount Sumeru is the God King Virūpākṣa’s city called Cūḷasudarśana, which is 6,000 yojanas across. It has seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p3}
 
-4\. “A thousand yojanas to the north of Mount Sumeru is the God King Vaiśravaṇa’s three cities. The first is called Terrible, the second is called Heavenly Respect, and the third is called Refuge of Many. Each of them is 6,000 yojanas across. They have seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+4\. “A thousand yojanas to the north of Mount Sumeru is the God King Vaiśravaṇa’s three cities. The first is called Terrible, the second is called Heavenly Respect, and the third is called Refuge of Many. Each of them is 6,000 yojanas across. They have seven fortress walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p4}
 
-5\. “North of the city Refuge to Many, there is a forest park called Kapīvanta, which is 4,000 yojanas across. That park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+5\. “North of the city Refuge to Many, there is a forest park called Kapīvanta, which is 4,000 yojanas across. That park has seven walls, seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p5}
 
-6\. “Between that park and the city, there’s a lake called Nalinī, which is forty yojanas across. Its water is clear and unpolluted. It has steps made of the seven treasures on its banks, and seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. Blue, yellow, red, and white lotus flowers grow in it, and the colors mix together and shine at a distance of half a yojana. Their fragrance is also sweet-smelling for half a yojana. Those flowers also have roots like wheel hubs, and they produce sap that’s white as milk and tastes sweet as honey … and countless birds sing to each other peacefully as before.
+6\. “Between that park and the city, there’s a lake called Nalinī, which is forty yojanas across. Its water is clear and unpolluted. It has steps made of the seven treasures on its banks, and seven balustrades, seven nettings, and seven rows of trees encircling it with decorations made of the seven treasures. Blue, yellow, red, and white lotus flowers grow in it, and the colors mix together and shine at a distance of half a yojana. Their fragrance is also sweet-smelling for half a yojana. Those flowers also have roots like wheel hubs, and they produce sap that’s white as milk and tastes sweet as honey … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p6}
 
-7\. “Except for the palaces of the Sun and Moon, the palace halls of the four god kings are forty yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of the seven treasures … and countless birds sing to each other peacefully as before.
+7\. “Except for the palaces of the Sun and Moon, the palace halls of the four god kings are forty yojanas across. Those palaces have seven walls, seven balustrades, seven nettings, and seven rows of trees encircling them with decorations made of the seven treasures … and countless birds sing to each other peacefully <em>as before</em>.
 {:#p7}
 
 8\. “Those palace halls are forty yojanas, twenty yojanas, or at least five yojanas across. From the city Refuge to Many, there’s a treasure stairway that goes to the city \*Bhadrottamā. There’s a stairway that leads to the city Sudarśana. There’s a stairway that leads to the city Cūḷasudarśana. There’s a stairway that leads to the city Terrible and the city Heavenly Respect. There’s a stairway that leads to the park Kapīvanta. There’s a stairway that leads to Lake Nalinī. There’s also a stairway that leads to the palace of the great minister of the four god kings.
